3.Semantic.Analysis/test/semanal/error/error4_1_4.mod
module retarr;

function f() : integer[3][5];
begin
end f;

begin

end retarr.
